# proof-of-history-testnet

./: README.md
client/: Cargo.toml
client/src/: main.rs
generator/: Cargo.toml
generator/src/: main.rs
leader_node/: Cargo.toml
leader_node/src/: block.rs  election.rs  generator.rs  main.rs  manager.rs  monitor.rs  network.rs  tester.rs
leader_node/static/: index.html  style.css
node/src/: main.rs
validator/: Cargo.toml
validator/src/: block.rs  lib.rs  main.rs  network.rs  poh_handler.rs  registration.rs  transaction.rs
