[package]
name = "leader_node"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.9.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
env_logger = "0.9"
log = "0.4"
validator = { path = "../validator" }

[[bin]]
name = "leader_node"
path = "src/main.rs"
